--- a/task-2/index.html
+++ b/task-2/index.html
@@ -5,17 +5,200 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Films</title>
+    <title>Page</title>
     <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
     <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="media.css">
 </head>
 <body>
 
     <div id="app"></div>
 
     <script type="text/babel">
+
+        const Header = () => {
+            return (
+                <div className="navigation-block">
+                    <nav className="main-nav nav-hidden" id="mainNav">
+                        <ul className="container">
+                            <li><a href="#">Каталог товаров</a></li>
+                            <li><a href="#">Доставка и оплата</a></li>
+                            <li><a href="#">Отзывы</a></li>
+                            <li><a href="#">Контакты</a></li>
+                            <li><a href="#">Товары со скидкой</a></li>
+                        </ul>
+                    </nav>
+                </div>
+            );
+        };
+
+        const MainBlock = () => {
+            return (
+                <div className="main-block">
+                    <div className="container">
+                        <div className="main-block-box">
+                            <div className="main-block-left">
+                                <h1 className="main-left-tittle">Соберите шведскую стенку по своему желанию!</h1>
+                                <div className="main-left-text">Проснувшись однажды утром после беспокойного сна, Грегор
+                                    Замза обнаружил, что он у себя в постели превратился в страшное насекомое.
+                                </div>
+                                <div className="main-left-text-mobile">Удобный конструктор для создания стенки по вашим
+                                    желаниям!
+                                </div>
+                                <a href="#" className="main-left-link">Перейти в конструктор</a>
+                            </div>
+                            <div className="main-block-right">
+                                <div className="main-block-right-item">
+                                    <h3 className="right-item-tittle">Собственное швейное производство</h3>
+                                    <div className="right-item-text">Приглашаем к сотрудничеству</div>
+                                    <a href="#" className="right-item-link">Подробнее</a>
+
+                                </div>
+                                <div className="main-block-right-item">
+                                    <h3 className="right-item-tittle">Посетите наш шоу-рум!</h3>
+                                    <div className="right-item-text-2">Н.Новгород, ул.Народная 20 Ежедневно с 9:00 до
+                                        19:00
+                                    </div>
+                                    <a href="#" className="right-item-link">Подробнее</a>
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            );
+        };
+
+        const ShopGoodsBlock = () => {
+            return (
+                <div className="shop-goods">
+                    <div className="container">
+                        <h3 className="shop-goods-tittle">Каталог товаров</h3>
+                        <div className="shop-goods-flex">
+                            <a href="#" className="shop-goods-item">
+                                <p className="shop-goods-item-text">Щведские стенки</p></a>
+                            <a href="#" className="shop-goods-item"><p className="shop-goods-item-text">Турники</p></a>
+                            <a href="#" className="shop-goods-item"><p className="shop-goods-item-text">Уличные
+                                комплексы</p></a>
+                            <a href="#" className="shop-goods-item"><p className="shop-goods-item-text">Щведские
+                                стенки</p></a>
+                            <a href="#" className="shop-goods-item"><p className="shop-goods-item-text">Щведские
+                                стенки</p></a>
+                            <a href="#" className="shop-goods-item"><p className="shop-goods-item-text">Щведские
+                                стенки</p></a>
+                            <a href="#" className="shop-goods-item"><p className="shop-goods-item-text">Щведские
+                                стенки</p></a>
+                            <a href="#" className="shop-goods-item"><p className="shop-goods-item-text">Щведские
+                                стенки</p></a>
+                        </div>
+
+                    </div>
+                </div>
+            );
+        };
+
+        const AboutBlock = () => {
+            return (
+                <div className="about-block">
+                    <div className="container">
+                        <h4 className="about-tittle">О компании</h4>
+                        <div className="about-text-box">
+                            <p className="about-text">Компания «Sportova» специализируется на продаже шведских стенок,
+                                детских площадок и тренажеров. Мы являемся официальными дилерами ведущих производителей
+                                шведских стенок и детских площадок.</p>
+                            <a href="#" className="about-link">Подробнее</a>
+                        </div>
+                        <div className="about-cards-flex">
+                            <div className="about-card">Выставочный зал на 450 кв.м</div>
+                            <div className="about-card">Выставочный зал на 450 кв.м</div>
+                            <div className="about-card">Выставочный зал на 450 кв.м</div>
+                            <div className="about-card">Выставочный зал на 450 кв.м</div>
+                        </div>
+                        <div className="about-list-box">
+                            <img src="./images/about-list-img.jpg" alt="about-image" className="about-list-image" />
+                                <ul className="about-list">
+                                    <li>Узкая специализация. Мы знаем больше нюансов и потребностей клиента, чем
+                                        магазины, которые продают все подряд. Соответственно, сможем лучше
+                                        проконсультировать и подобрать необходимый Вам комплекс;
+                                    </li>
+                                    <li>90% ассортимента держим в наличии на складе в Нижнем Новгороде и Москве;</li>
+                                    <li>Выставочный зал, где все оборудование надежно закреплено. Вы можете
+                                        протестировать комплексы еще до покупки;
+                                    </li>
+                                    <li>Если Вам необходима сборка шведской стенки, детской площадки или турника – мы
+                                        предоставляем такую услугу. В компании работают опытные и аккуратные
+                                        специалисты. Также мы оказываем услугу по укорачиванию шведской стенки;
+                                    </li>
+                                    <li>Если товар не подошел, Вы можете его обменять или вернуть в течение расширенного
+                                        срока в 30 дней;
+                                    </li>
+                                </ul>
+                        </div>
+                    </div>
+                </div>
+            );
+        };
+        const DeliveryBlock = () => {
+            return (
+                <div className="delivery-block">
+                    <div className="container delivery-block-flex">
+                        <div className="delivery">
+                            <h4 className="delivery-tittle">Доставка</h4>
+                            <p className="delivery-text">Проснувшись однажды утром после беспокойного сна, Грегор Замза
+                                обнаружил, что он у себя в постели превратился в страшное насекомое.</p>
+                            <p className="delivery-text">Лежа на панцирнотвердой спине, он видел, стоило ему приподнять
+                                голову, свой коричневый, выпуклый, разделенный дугообразными чешуйками живот, на
+                                верхушке которого еле держалось готовое вот-вот окончательно сползти одеяло.</p>
+                            <a href="#" className="delivery-text">Детальное описание</a>
+                        </div>
+
+                        <div className="payment">
+                            <h4 className="delivery-tittle">Оплата</h4>
+                            <p className="delivery-text">Проснувшись однажды утром после беспокойного сна, Грегор Замза
+                                обнаружил, что он у себя в постели превратился в страшное насекомое.</p>
+                            <p className="delivery-text">Лежа на панцирнотвердой спине, он видел, стоило ему приподнять
+                                голову, свой коричневый, выпуклый, разделенный дугообразными чешуйками живот, на
+                                верхушке которого еле держалось готовое вот-вот окончательно сползти одеяло.</p>
+                            <a href="#" className="delivery-text">Детальное описание</a>
+                        </div>
+                    </div>
+                </div>
+            );
+        };
+
+        const Footer = () => {
+            return (
+                <footer className="footer">
+                    <div className="container">
+                        <div className="footer-flex">
+                            <div className="">
+                                <img src="./images/footer-logo.svg" alt="footer-logo" className="footer-logo" />
+                            </div>
+                            <p className="footer-text">© ООО «Спортова», 2021</p>
+                        </div>
+                    </div>
+                </footer>
+            );
+        };
+
+        const page = (
+            <>
+                <Header />
+                <MainBlock />
+                <ShopGoodsBlock />
+                <AboutBlock />
+                <DeliveryBlock />
+                <Footer />
+
+            </>
+        );
+
+        ReactDOM.render(page, document.getElementById('app'))
 
     </script>
 </body>
